--- a/src/partials/header-popup-error.html
+++ b/src/partials/header-popup-error.html
@@ -64,7 +64,7 @@
 			<!-- menu -->
 			<div class="menu js-menu">
 				<button class="menu__btn js-btn-menu">
-					<span>MENU</span>
+					<span>меню</span>
 				</button>
 				<ul class="menu__list">
 					<li><a href="#">Цена</a></li>
