--- a/src/sass/_block.sass
+++ b/src/sass/_block.sass
@@ -6,7 +6,7 @@
 	height: auto
 
 // leftbar
-.rightbar
+.rightbar 
 	padding-top: 40px
 	height: 100%
 	width: 89%
@@ -109,17 +109,17 @@
 		+r(960)
 			margin-top: 45px
 
-// logo-wrap
-.logo-wrap
-	position: fixed
-	left: 0
-	width: 11.7%
-	min-width: 140px
-	+r(960)
-		position: static
-		left: auto
-		width: auto
-		min-width: 0
+// // logo-wrap
+// .logo-wrap
+// 	position: fixed
+// 	left: 0
+// 	width: 11.7%
+// 	min-width: 140px
+// 	+r(960)
+// 		position: static
+// 		left: auto
+// 		width: auto
+// 		min-width: 0
 
 // logo
 .logo
@@ -964,6 +964,14 @@ h1,
 .accord
 	& + .accord
 		margin-top: -2px
+	& + .accord,
+	&:first-of-type
+		.table
+			border-top: none
+			border-bottom: none
+	&:last-of-type
+		.table
+			border-bottom: 2px solid #dadada 
 	&.is-active,
 	&:hover
 		.accord__top
@@ -978,11 +986,14 @@ h1,
 			.accord__top
 				border-top-color: $yellow
 	&.is-active
-		margin-top: 0
+		// margin-top: 0
 		.accord__top
 			&:before
 				transform: rotate(180deg)
 		& + .accord
+			&:hover
+				.accord__top
+					border-top-color: $yellow
 			.accord__top
 				border-top-color: $bd-table
 	.table
@@ -1100,39 +1111,3 @@ h1,
 	+r(768)
 		display: block !important
 
-// text
-// .text
-// 	position: relative
-// 	display: inline-block
-// 	width: 600px
-// 	height: 40px
-// 	font-family: 'Open Sans', sans-serif
-// 	font-weight: 600
-// 	font-size: 40px
-// 	z-index: 200
-
-// 	p
-// 		display: inline-block
-// 		vertical-align: top
-// 		margin: 0
-
-// .word
-// 	position: absolute
-// 	width: auto
-// 	opacity: 0
-
-// .letter
-// 	display: inline-block
-// 	position: relative
-// 	float: left
-// 	padding: 0
-// 	transform: translateZ(25px)
-// 	transform-origin: 50% 50% 25px
-// 	&.outs
-// 		transform: rotateX(90deg)
-// 		transition: transform 0.32s cubic-bezier(0.55, 0.055, 0.675, 0.19)
-// 	&.behind
-// 		transform: rotateX(-90deg)
-// 	&.in
-// 		transform: rotateX(0deg)
-// 		transition: transform 0.38s cubic-bezier(0.175, 0.885, 0.32, 1.275)
