--- a/src/sass/_teacher.sass
+++ b/src/sass/_teacher.sass
@@ -198,14 +198,14 @@ body.is-teacher
 .accord-groups
 	margin-top: 50px
 
-// poin
+// poin 
 .point
 	width: 100%
 	font-size: 14px
 	color: $black
 	text-align: center
 	text-transform: uppercase
-	+lb
+	+lr
 	vertical-align: middle
 	display: inline-block
 	&:focus
