--- a/src/sass/_ui.sass
+++ b/src/sass/_ui.sass
@@ -81,6 +81,8 @@ div.ui-datepicker
 				a
 					cursor: default
 					color: $white
+					&.ui-state-hover
+						color: $black 
 			.ui-state-hover
 				background: $white 
 				border-color: transparent 
