--- a/src/partials/header-home.html
+++ b/src/partials/header-home.html
@@ -78,7 +78,7 @@
 			<!-- menu -->
 			<div class="menu js-menu">
 				<button class="menu__btn js-btn-menu">
-					<span>MENU</span>
+					<span>меню</span>
 				</button>
 				<ul class="menu__list js-menu-list">
 					<li><a href="#price">Цена</a></li>
