--- a/src/sass/_header.sass
+++ b/src/sass/_header.sass
@@ -115,10 +115,11 @@
 	&__btn
 		position: relative
 		padding-top: 35px
-		width: 35px
+		width: 37px
 		+lb
 		font-size: 11px
 		line-height: 1
+		text-transform: uppercase
 		background: transparent
 		-webkit-font-smoothing: antialiased
 		font-smoothing: antialiased
@@ -156,7 +157,7 @@
 		top: 0
 		left: -1px
 		margin-top: 30px
-		padding-bottom: 5px
+		padding: 10px 0 15px 
 		visibility: hidden
 		z-index: -1
 		opacity: 0
