--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -77,13 +77,17 @@ body.is-home
 // text
 .text
 	position: relative
+	margin-left: 20px
 	text-transform: uppercase
-	text-align: left
+	text-align: left 
+	+r(380)
+		margin: 0 -5px
 	&:first-child
 		right: -40px
 		+r(768)
 			right: -20px
 	.char 
+		margin-left: 3px
 		font-size: 36px
 		+lb
 		min-width: 10px
@@ -91,12 +95,23 @@ body.is-home
 		backface-visibility: hidden
 		transform-style: preserve-3d
 		transform-origin: 50% 50% -15px
+		&:first-child
+			margin-left: 0
 		+r(768)
 			font-size: 24px
+		+r(480)
+			font-size: 22px
+		+r(380)
+			margin-left: 0
 	.word
+		margin-left: 10px
 		perspective: 900px
 		vertical-align: top
 		display: inline-block
+		+r(380)
+			margin-left: 2px
+		&:first-child
+			margin-left: 0
 	.row 
 		position: relative
 		margin: 0
