--- a/src/sass/_popup.sass
+++ b/src/sass/_popup.sass
@@ -17,6 +17,8 @@
 	+vertical
 	overflow-y: scroll
 	transition: opacity .4s ease-in, z-index .4s ease-in, visibility .4s ease-in
+	+r(768)
+		padding: 5px 0
 	&.is-active
 		opacity: 1
 		visibility: visible
@@ -95,6 +97,7 @@
 		+r(1024)
 			margin-top: 50px
 		+r(768)
+			margin-top: 45px
 			padding: 45px 40px 40px
 		+r(480)
 			padding: 45px 30px 40px
@@ -108,6 +111,9 @@
 		transform: translate3d(0,0,0)
 		transition: opacity .2s
 		background: transparent
+		+r(768)
+			top: -35px
+			right: 34px
 		&:hover
 			opacity: .7
 		&:active
