--- a/src/sass/_block.sass
+++ b/src/sass/_block.sass
@@ -939,26 +939,21 @@ h1,
 
 // step-ico
 .step-ico
-	width: 105px
-	height: 105px
-	line-height: 102px
+	width: 104px
+	height: 104px
 	vertical-align: top
 	border-radius: 50%
 	overflow: hidden
+	font-size: 0
 	text-align: center
-	background: $yellow
+	background: $white
 	display: inline-block
-	+r(768)
-		width: 60px
-		height: 60px
-		line-height: 55px
 	&:first-child
 		margin-left: 0
 	.icon
-		vertical-align: middle
+		vertical-align: top
 		img
-			+r(768)
-				width: 80%
+			display: block
 
 // accord
 .accord
