--- a/src/sass/_header.sass
+++ b/src/sass/_header.sass
@@ -47,8 +47,8 @@
 	.logout
 		float: right
 	.step-ico
-		margin: -50px 0 0 32px
-		padding-top: 58px
+		margin: -53px 0 0 32px
+		padding-top: 53px
 		line-height: 1	
 	&__in 
 		position: relative
@@ -88,6 +88,8 @@
 		text-align: right
 		font-size: 0
 		overflow: hidden
+		+r(960)
+			display: none
 
 // menu
 .menu
