--- a/src/sass/_student.sass
+++ b/src/sass/_student.sass
@@ -577,18 +577,22 @@ body.is-student
 
 // step-icons
 .step-icons
-	margin: -48px 0 13px
+	margin: -59px 0 13px
 	text-align: right
 	display: none
-	+r(768)
+	+r(960)
 		display: block
+	+r(768)
+		margin-top: -37px
 	.step-ico
-		margin-left: 7px
+		margin-left: 6px
+		width: auto
+		height: auto
 		&:first-child
 			margin-left: 0
-		&.is-step-ico-2
-			padding-top: 10px
-			img
-				width: 85%
-		&.is-step-ico-3
-			padding-top: 6px
+		// &.is-step-ico-2
+		// 	padding-top: 10px
+		// 	img
+		// 		width: 85%
+		// &.is-step-ico-3
+		// 	padding-top: 6px
