--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -70,8 +70,11 @@ body
 	+lr
 	font-size: 14px
 	line-height: 1.4
+	min-width: 320px
 	&.is-hidden
 		overflow: hidden
+		.sidebar .logo
+			z-index: 101
 	&.is-map
 		.out
 			padding-bottom: 0
