--- a/src/sass/_teacher.sass
+++ b/src/sass/_teacher.sass
@@ -204,8 +204,8 @@ body.is-teacher
 	font-size: 14px
 	color: $black
 	text-align: center
+	+lbd
 	text-transform: uppercase
-	+lr
 	vertical-align: middle
 	display: inline-block
 	&:focus
@@ -213,6 +213,7 @@ body.is-teacher
 			font-size: 0
 	&::placeholder
 		color: $c_point
+		+lr
 		text-transform: lowercase
 	&.is-filled
 		color: $black
