--- a/src/sass/_block.sass
+++ b/src/sass/_block.sass
@@ -96,7 +96,7 @@
 			margin-top: 0
 .l-col1
 	float: left
-	width: 52%
+	width: calc(50% - 31px)
 	& > .title-large
 		line-height: 0.7
 	.title-large
@@ -104,7 +104,7 @@
 .l-col2
 	float: right
 	padding-left: 32px
-	width: 48%
+	width: calc(50% + 31px)
 	&.is-mod
 		+r(960)
 			margin-top: 45px
@@ -123,6 +123,7 @@
 
 // logo
 .logo
+	position: relative
 	transform: translate3d(0,0,0)
 	+svg(logo,158,172)
 	+r(768)
@@ -749,6 +750,8 @@ h1,
 	margin: 50px 0
 	font-size: 0
 	+lb
+	+r(768)
+		padding: 0 20px
 	li
 		margin-left: 35px
 		min-width: 172px
@@ -775,6 +778,9 @@ h1,
 	a
 		padding: 7px 15px
 		display: block
+		+r(768)
+			padding: 10px 15px
+			letter-spacing: 1px 
 
 // table
 .table
@@ -842,7 +848,7 @@ h1,
 	&__time
 		width: 87px
 		+r(960)
-			width: 70px
+			width: 45px
 	&__name
 		+r(768)
 			width: 100%
@@ -1000,7 +1006,7 @@ h1,
 		+r(960)
 			width: 70px
 		+r(768)
-			width: 35px
+			width: 55px
 			text-align: left
 	.time
 		width: 100px
