--- a/src/sass/_student.sass
+++ b/src/sass/_student.sass
@@ -246,6 +246,27 @@ body.is-student
 			padding-left: 85px
 		+r(480)
 			padding-left: 15px
+	.popup
+		+r(768)
+			background: transparent
+			&:after
+				display: none
+			&__close
+				color: $black
+		.popup__close
+			&:after
+				position: absolute
+				content: ""
+				top: -15px
+				left: 50%
+				margin-left: -25px
+				width: 50px
+				height: 50px 
+				z-index: -1
+				background: $yellow
+				display: none
+				+r(768)
+					display: block
 
 
 // mixin to step colors
@@ -261,13 +282,13 @@ body.is-student
 		&.is-active 
 			&:hover
 				.accord__top
-					border-bottom-color: darken($color, 10%)
+					border-bottom-color: darken($color, 15%)
 			.accord__top
 				border-bottom-color: $color
 			& + .accord 
 				&:hover
 					.accord__top
-						border-top-color: darken($color, 10%)
+						border-top-color: darken($color, 15%)
 				.accord__top
 					border-top-color: $color
 		.accord__top
@@ -276,7 +297,7 @@ body.is-student
 			border-color: $color
 		&:hover
 			.accord__top
-				background: darken($color, 10%)
+				background: darken($color, 15%)
 	.btn_bord
 		&:hover
 			color: $color
