--- a/src/sass/_block.sass
+++ b/src/sass/_block.sass
@@ -102,6 +102,8 @@
 	width: calc(50% - 32px)
 	& > .title-large
 		line-height: 0.7
+	&.is-w65
+		width: 75%
 	.title-large
 		color: $yellow
 .l-col2
