--- a/src/partials/paralax.html
+++ b/src/partials/paralax.html
@@ -8,7 +8,7 @@
 					 xml:space="preserve">
 				<style type="text/css">
 					.st0{opacity:0.3;}
-					.st1{fill:#FFFFFF;}
+					.st1{fill:#959595;}
 				</style>
 				<defs>
 				</defs>
@@ -25,7 +25,7 @@
 					 xml:space="preserve">
 				<style type="text/css">
 					.st0{opacity:0.3;}
-					.st1{fill:#FFFFFF;}
+					.st1{fill:#959595;}
 				</style>
 				<defs>
 				</defs>
@@ -40,7 +40,7 @@
 					 xml:space="preserve">
 				<style type="text/css">
 					.st0{opacity:0.3;}
-					.st1{fill:#FFFFFF;}
+					.st1{fill:#959595;}
 				</style>
 				<defs>
 				</defs>
@@ -54,7 +54,7 @@
 					 xml:space="preserve">
 				<style type="text/css">
 					.st0{opacity:0.3;}
-					.st1{fill:#FFFFFF;}
+					.st1{fill:#959595;}
 				</style>
 				<defs>
 				</defs>
@@ -68,7 +68,7 @@
 					 xml:space="preserve">
 				<style type="text/css">
 					.st0{opacity:0.3;}
-					.st1{fill:#FFFFFF;}
+					.st1{fill:#959595;}
 				</style>
 				<defs>
 				</defs>
@@ -82,7 +82,7 @@
 					xml:space="preserve">
 				<style type="text/css">
 					.st0{opacity:0.3;}
-					.st1{fill:#FFFFFF;}
+					.st1{fill:#959595;}
 				</style>
 				<defs>
 				</defs>
@@ -98,7 +98,7 @@
 					xml:space="preserve">
 				<style type="text/css">
 					.st0{opacity:0.3;}
-					.st1{fill:#FFFFFF;}
+					.st1{fill:#959595;}
 				</style>
 				<defs>
 				</defs>
@@ -114,7 +114,7 @@
 					 xml:space="preserve">
 				<style type="text/css">
 					.st0{opacity:0.3;}
-					.st1{fill:#FFFFFF;}
+					.st1{fill:#959595;}
 				</style>
 				<defs>
 				</defs>
@@ -128,7 +128,7 @@
 					xml:space="preserve">
 				<style type="text/css">
 					.st0{opacity:0.3;}
-					.st1{fill:#FFFFFF;}
+					.st1{fill:#959595;}
 				</style>
 				<defs>
 				</defs>
@@ -142,7 +142,7 @@
 					xml:space="preserve">
 				<style type="text/css">
 					.st0{opacity:0.3;}
-					.st1{fill:#FFFFFF;}
+					.st1{fill:#959595;}
 				</style>
 				<defs>
 				</defs>
@@ -157,7 +157,7 @@
 					 xml:space="preserve">
 				<style type="text/css">
 					.st0{opacity:0.3;}
-					.st1{fill:#FFFFFF;}
+					.st1{fill:#959595;}
 				</style>
 				<defs>
 				</defs>
@@ -172,7 +172,7 @@
 					xml:space="preserve">
 				<style type="text/css">
 					.st0{opacity:0.3;}
-					.st1{fill:#FFFFFF;}
+					.st1{fill:#959595;}
 				</style>
 				<defs>
 				</defs>
@@ -186,7 +186,7 @@
 					 xml:space="preserve">
 				<style type="text/css">
 					.st0{opacity:0.3;}
-					.st1{fill:#FFFFFF;}
+					.st1{fill:#959595;}
 				</style>
 				<defs>
 				</defs>
@@ -200,7 +200,7 @@
 					 xml:space="preserve">
 				<style type="text/css">
 					.st0{opacity:0.3;}
-					.st1{fill:#FFFFFF;}
+					.st1{fill:#959595;}
 				</style>
 				<defs>
 				</defs>
@@ -220,7 +220,7 @@
 						 xml:space="preserve">
 					<style type="text/css">
 						.st0{opacity:0.3;}
-						.st1{fill:#FFFFFF;}
+						.st1{fill:#959595;}
 					</style>
 					<defs>
 					</defs>
@@ -237,7 +237,7 @@
 						 xml:space="preserve">
 					<style type="text/css">
 						.st0{opacity:0.3;}
-						.st1{fill:#FFFFFF;}
+						.st1{fill:#959595;}
 					</style>
 					<defs>
 					</defs>
@@ -252,7 +252,7 @@
 						 xml:space="preserve">
 					<style type="text/css">
 						.st0{opacity:0.3;}
-						.st1{fill:#FFFFFF;}
+						.st1{fill:#959595;}
 					</style>
 					<defs>
 					</defs>
@@ -266,7 +266,7 @@
 						 xml:space="preserve">
 					<style type="text/css">
 						.st0{opacity:0.3;}
-						.st1{fill:#FFFFFF;}
+						.st1{fill:#959595;}
 					</style>
 					<defs>
 					</defs>
@@ -280,7 +280,7 @@
 						 xml:space="preserve">
 					<style type="text/css">
 						.st0{opacity:0.3;}
-						.st1{fill:#FFFFFF;}
+						.st1{fill:#959595;}
 					</style>
 					<defs>
 					</defs>
@@ -294,7 +294,7 @@
 						xml:space="preserve">
 					<style type="text/css">
 						.st0{opacity:0.3;}
-						.st1{fill:#FFFFFF;}
+						.st1{fill:#959595;}
 					</style>
 					<defs>
 					</defs>
@@ -310,7 +310,7 @@
 						xml:space="preserve">
 					<style type="text/css">
 						.st0{opacity:0.3;}
-						.st1{fill:#FFFFFF;}
+						.st1{fill:#959595;}
 					</style>
 					<defs>
 					</defs>
@@ -326,7 +326,7 @@
 						 xml:space="preserve">
 					<style type="text/css">
 						.st0{opacity:0.3;}
-						.st1{fill:#FFFFFF;}
+						.st1{fill:#959595;}
 					</style>
 					<defs>
 					</defs>
@@ -340,7 +340,7 @@
 						xml:space="preserve">
 					<style type="text/css">
 						.st0{opacity:0.3;}
-						.st1{fill:#FFFFFF;}
+						.st1{fill:#959595;}
 					</style>
 					<defs>
 					</defs>
@@ -354,7 +354,7 @@
 						xml:space="preserve">
 					<style type="text/css">
 						.st0{opacity:0.3;}
-						.st1{fill:#FFFFFF;}
+						.st1{fill:#959595;}
 					</style>
 					<defs>
 					</defs>
@@ -369,7 +369,7 @@
 						 xml:space="preserve">
 					<style type="text/css">
 						.st0{opacity:0.3;}
-						.st1{fill:#FFFFFF;}
+						.st1{fill:#959595;}
 					</style>
 					<defs>
 					</defs>
@@ -384,7 +384,7 @@
 						xml:space="preserve">
 					<style type="text/css">
 						.st0{opacity:0.3;}
-						.st1{fill:#FFFFFF;}
+						.st1{fill:#959595;}
 					</style>
 					<defs>
 					</defs>
@@ -398,7 +398,7 @@
 						 xml:space="preserve">
 					<style type="text/css">
 						.st0{opacity:0.3;}
-						.st1{fill:#FFFFFF;}
+						.st1{fill:#959595;}
 					</style>
 					<defs>
 					</defs>
@@ -412,7 +412,7 @@
 						 xml:space="preserve">
 					<style type="text/css">
 						.st0{opacity:0.3;}
-						.st1{fill:#FFFFFF;}
+						.st1{fill:#959595;}
 					</style>
 					<defs>
 					</defs>
