--- a/src/sass/_block.sass
+++ b/src/sass/_block.sass
@@ -1021,6 +1021,8 @@ h1,
 					border-top-color: $yellow
 			.accord__top
 				border-top-color: $bd-table
+		.time
+			+lb
 	.table
 		margin: 0
 		border-top: none
@@ -1035,6 +1037,7 @@ h1,
 			text-align: left
 	.time
 		width: 100px
+		+lr
 	.theme
 		font-size: 12px
 		+lr
